--- a/onboard/drive-app/build.gradle
+++ b/onboard/drive-app/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
     implementation 'com.github.oshi:oshi-core:5.+'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.+'
+    implementation "io.reactivex.rxjava3:rxjava:3.+"
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation 'org.slf4j:slf4j-simple:1.7.30'
