Implement basic ZeroMQ support

--- a/onboard/drive-app/src/main/resources/orion.DEV.properties
+++ b/onboard/drive-app/src/main/resources/orion.DEV.properties
@@ -4,3 +4,7 @@ serial.timeout=50
 serial.read.timeout=50
 serial.write.timeout=50
 serial.poll.timeout=100
+
+subscriber.bind=tcp://*:5000
+subscriber.timeout=0
+subscriber.read.timeout=50
