--- a/groundcontrol.drive/build.gradle
+++ b/groundcontrol.drive/build.gradle
@@ -12,13 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.zeromq:jeromq:0.5.2'
-    implementation 'com.fazecast:jSerialComm:[2.0.0,3.0.0)'
-    implementation 'com.github.oshi:oshi-core:5.+'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.+'
-    implementation "io.reactivex.rxjava3:rxjava:3.+"
-
-    implementation group: 'com.intellij', name: 'forms_rt', version: '7.0.3'
+    implementation project(':commons')
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation 'org.slf4j:slf4j-simple:1.7.30'
