--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'orion.apps'
 
 include ':commons'
 include ':onboard.drive'
+include ':onboard.manipulator'
 include ':groundcontrol.drive'
