--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 allprojects {
     repositories {
         mavenCentral()
+        jcenter()
+        maven { url "https://jitpack.io" }
     }
 
     plugins.withType(JavaPlugin) {
