--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -18,6 +18,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.+'
     implementation "io.reactivex.rxjava3:rxjava:3.+"
 
+    // Gamepad support
+    implementation 'com.github.WilliamAHartman:Jamepad:1.4.0'
+    implementation 'uk.co.electronstudio.sdl2gdx:sdl2gdx:1+'
+
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation 'org.slf4j:slf4j-simple:1.7.30'
 
